worked on filters

--- a/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
+++ b/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
@@ -1,5 +1,5 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
-    <p-checkbox label="Nyaloka"></p-checkbox>
+    <p-checkbox label="Filter"></p-checkbox>
   </div>
 </div>
