switching back to the first nav. bar implementation

--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,87 +1,7 @@
-<nav class="navbar navbar-expand-md mb-3 shadow-sm py-md-3">
-  <a class="navbar-brand" routerLink="home">QA4SM Validation Service</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed"
-          [attr.aria-expanded]="!isCollapsed" >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <div ngbDropdown class="d-inline-block">
-        <button class="navbar-btn btn btn-outline-primary m-1" ngbDropdownToggle>Menu</button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button ngbDropdownItem>
-            <fa-icon [icon]="aboutIcon"></fa-icon>
-            About
-          </button>
-          <button ngbDropdownItem>
-            <fa-icon [icon]="helpIcon"></fa-icon>
-            Help
-          </button>
-          <button ngbDropdownItem>
-            <fa-icon [icon]="datasetsIcon"></fa-icon>
-            Datasets
-          </button>
-          <button ngbDropdownItem>
-            <fa-icon [icon]="termsIcon"></fa-icon>
-            Terms
-          </button>
-          <button ngbDropdownItem [disabled]="userProfileButtonDisabled" routerLink="/user-profile">
-            <fa-icon [icon]="profileIcon"></fa-icon>
-            Profile
-          </button>
-          <button ngbDropdownItem [disabled]="logoutButtonDisabled" (click)="logout()">
-            <fa-icon [icon]="logoutIcon"></fa-icon>
-            Logout
-          </button>
-        </div>
-      </div>
-
-      <li class="nav-item  m-1">
-        <a class="nav-link navbar-btn btn btn-outline-primary " routerLink="validate" >
-          <fa-icon [icon]="validateIcon"></fa-icon>
-          Validate<span
-          class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item  m-1">
-        <a class="nav-link navbar-btn btn btn-outline-primary" routerLink="validations">
-          <fa-icon [icon]="myValidationsIcon"></fa-icon>
-          My Validations
-        </a>
-      </li>
-      <li class="nav-item  m-1">
-        <a class="nav-link navbar-btn btn btn-outline-primary" href="#">
-          <fa-icon [icon]="publishedValidationsIcon"></fa-icon>
-          Published Validations</a>
-      </li>
-    </ul>
+<div class="p-grid">
+  <div class="p-col-12">
+    <p-menubar [model]="items">
+      <div class="p-d-inline-flex">QA4SM Validation Service</div>
+    </p-menubar>
   </div>
-</nav>
-<!--<nav class="navbar navbar-expand-lg ">-->
-<!--  <div class="navbar-brand" >-->
-<!--  QA4SM Validation Service-->
-
-<!--  </div>-->
-<!--  <button (click)="isCollapsed = !isCollapsed" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--    <span class="navbar-toggler-icon"></span>-->
-<!--  </button>-->
-
-<!--  <div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--    <ul class="navbar-nav ml-auto">-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="#">Home</a>-->
-<!--      </li>-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="https://twitter.com/oktadev">@oktadev</a>-->
-<!--      </li>-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" href="https://github.com/oktadeveloper/okta-angular-bootstrap-example">GitHub</a>-->
-<!--      </li>-->
-<!--      <li class="nav-item pl-lg-3">-->
-<!--        <button  class="btn btn-outline-primary">Login</button>-->
-<!--        <button class="btn btn-outline-secondary">Logout</button>-->
-<!--      </li>-->
-<!--    </ul>-->
-<!--  </div>-->
-<!--</nav>-->
+</div>
