--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -71,6 +71,7 @@
 
                             <div class="col-sm" style="text-align: right; max-width: 6.8rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
+                                <a class="btn btn-sm btn-primary btn-action" href="{% url 'validation' %}?valrun_uuid={{ valrun.id }}" title="Load validation settings"><span class="fas fa-redo"></span></a>
                                 {% if current_user %}
                                     {% if valrun not in copied_runs %}
                                         <button class="btn btn-sm btn-primary btn-action" title="Track this validation" onclick="ajax_attach_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>
