implemented validation period module

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -30,7 +30,8 @@
 
               <qa-basic-filter *ngFor="let filter of item.basicFilters; let i = index"
                                [filterModel]="filter"></qa-basic-filter>
-              <button pButton type="button" (click)="removeDataset(validationModel.datasetConfigurations[i])" label="Remove dataset"
+              <button pButton type="button" (click)="removeDataset(validationModel.datasetConfigurations[i])"
+                      label="Remove dataset"
                       icon="pi pi-trash"
                       class="p-button-danger" style="padding: 0.2rem;"></button>
             </p-accordionTab>
@@ -54,15 +55,17 @@
             </label>
           </ng-template>
 
-          <div *ngIf="validationModel.referenceConfigurations.length>0 && validationModel.referenceConfigurations[0].datasetModel.selectedDataset">
+          <div
+            *ngIf="validationModel.referenceConfigurations.length>0 && validationModel.referenceConfigurations[0].datasetModel.selectedDataset">
             <qa-dataset
               [reference]="true"
               [removable]="false"
               [selectionModel]="validationModel.referenceConfigurations[0].datasetModel"
               (changeDataset)="onReferenceChange()"></qa-dataset>
 
-            <qa-basic-filter *ngFor="let filter of validationModel.referenceConfigurations[0].basicFilters; let i = index"
-                             [filterModel]="filter"></qa-basic-filter>
+            <qa-basic-filter
+              *ngFor="let filter of validationModel.referenceConfigurations[0].basicFilters; let i = index"
+              [filterModel]="filter"></qa-basic-filter>
           </div>
 
         </p-panel>
@@ -71,6 +74,11 @@
       <!--      Spatial subsetting-->
       <div class="p-col-12">
         <qa-spatial-subset [subsetModel]="validationModel.spatialSubsetModel"></qa-spatial-subset>
+      </div>
+
+      <!--      Validation period-->
+      <div class="p-col-12">
+        <qa-validation-period [validationPeriodModel]="validationModel.validationPeriodModel"></qa-validation-period>
       </div>
     </div>
   </div>
