--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -1,1 +1,26 @@
-<p>validation-period works!</p>
+<p-panel header="Spatial Subsetting" [toggleable]="true">
+  <ng-template pTemplate="icons">
+    <label class="p-panel-header-icon"
+           pTooltip="Restricts the input and reference data to the time period given. Days 'from' and 'to' are fully included in the interval."
+           tooltipPosition="bottom">
+      <span class="pi pi-question-circle"></span>
+    </label>
+  </ng-template>
+  <div class="p-grid">
+    <div class="p-col-12 p-sm-6">
+      <div class="p-float-label p-m-2">
+        <p-calendar id="fromDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
+                    yearRange="1970:2100" [(ngModel)]="validationPeriodModel.intervalFrom"></p-calendar>
+        <label for="fromDateInput">From</label>
+      </div>
+    </div>
+
+    <div class="p-col-12 p-sm-6">
+      <div class="p-float-label p-m-2">
+        <p-calendar id="toDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
+                    yearRange="1970:2100"  [(ngModel)]="validationPeriodModel.intervalTo"></p-calendar>
+        <label for="toDateInput">To</label>
+      </div>
+    </div>
+  </div>
+</p-panel>
