--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -80,6 +80,9 @@
       <div class="p-col-12">
         <qa-validation-period [validationPeriodModel]="validationModel.validationPeriodModel"></qa-validation-period>
       </div>
+      <div class="p-col-12">
+        <qa-metrics [validationModel]="validationModel"></qa-metrics>
+      </div>
     </div>
   </div>
 </div>
