--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -90,6 +90,11 @@
       <div class="p-col-12">
         <qa-anomalies [methodForValidation]="validationModel.anomalies"></qa-anomalies>
       </div>
+
+      <!--      Scaling-->
+      <div class="p-col-12">
+        <qa-scaling [validationModel]="validationModel"></qa-scaling>
+      </div>
     </div>
   </div>
 </div>
