retrievieng published validationrun info moved to published-validationrun page

--- a/UI/src/app/pages/published-validations/published-validations.component.html
+++ b/UI/src/app/pages/published-validations/published-validations.component.html
@@ -1,1 +1,5 @@
-<qa-validationrun-row></qa-validationrun-row>
+<div *ngFor="let valrun of publishedValidation$|async">
+  <qa-validationrun-row [published]="true"></qa-validationrun-row>
+
+</div>
+
