added container class to published-validationrun page, added p-panel tag to validationrun row

--- a/UI/src/app/pages/published-validations/published-validations.component.html
+++ b/UI/src/app/pages/published-validations/published-validations.component.html
@@ -1,5 +1,5 @@
-<div *ngFor="let valrun of publishedValidation$|async">
-  <qa-validationrun-row [published]="true"></qa-validationrun-row>
-
+<div class="container" >
+  <div *ngFor="let valrun of publishedValidation$|async">
+    <qa-validationrun-row [published]="true" [valrun]="valrun"></qa-validationrun-row>
+  </div>
 </div>
-
