--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="published">
+<p-panel *ngIf="published">
     <ng-template pTemplate="header">
-      <qa-header [published]="published" [valrun]="valrun" [doiPrefix]="getDoiPrefix()"> </qa-header>
-      <!--            <h5 class="my-0" style="float: left"><span class=" font-weight-normal">Name:</span> {{ valrun.name_tag }}</h5>-->
-      <!--            <h5 class="my-0" style="float: right">-->
-      <!--              <span class=" font-weight-normal">DOI: </span>-->
-      <!--              <a class="doilink" target="_blank" href="{{this.getDoiPrefix()}}{{ valrun.doi }}">{{ valrun.doi }}</a>-->
-      <!--            </h5>-->
+<!--      <qa-header [published]="published" [valrun]="valrun" [doiPrefix]="getDoiPrefix()"> </qa-header>-->
+<!--      &lt;!&ndash;            <h5 class="my-0" style="float: left"><span class=" font-weight-normal">Name:</span> {{ valrun.name_tag }}</h5>&ndash;&gt;-->
+<!--      &lt;!&ndash;            <h5 class="my-0" style="float: right">&ndash;&gt;-->
+<!--      &lt;!&ndash;              <span class=" font-weight-normal">DOI: </span>&ndash;&gt;-->
+<!--      &lt;!&ndash;              <a class="doilink" target="_blank" href="{{this.getDoiPrefix()}}{{ valrun.doi }}">{{ valrun.doi }}</a>&ndash;&gt;-->
+<!--      &lt;!&ndash;            </h5>&ndash;&gt;-->
     </ng-template>
     <div class="col-sm-4">
       <strong>Data:</strong><br/>
 
     </div>
-</div>
+</p-panel>
